# docs/swagger.yaml
@@ -1,4 +1,23 @@
 definitions:
+  dto.Content:
+    properties:
+      comment_count:
+        type: integer
+      id:
+        type: integer
+      is_premium:
+        type: boolean
+      like_count:
+        type: integer
+      name:
+        type: string
+      owner_id:
+        type: integer
+      type_id:
+        type: integer
+    required:
+    - name
+    type: object
   dto.ContentPaginate:
     properties:
       data:
@@ -11,6 +30,15 @@ definitions:
         type: integer
       totalItems:
         type: integer
+    type: object
+  dto.ContentPayload:
+    properties:
+      is_premium:
+        type: boolean
+      name:
+        type: string
+    required:
+    - name
     type: object
   entity.Content:
     properties:
@@ -46,7 +74,7 @@ paths:
     get:
       consumes:
       - application/json
-      description: get string by ID
+      description: get content list
       produces:
       - application/json
       responses:
@@ -54,7 +82,105 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/dto.ContentPaginate'
-      summary: Show an account
+      security:
+      - Bearer: []
+      summary: get content list
       tags:
-      - accounts
+      - contents
+  /contents/:id:
+    delete:
+      consumes:
+      - application/json
+      description: delete content
+      parameters:
+      - description: Content ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.Content'
+      security:
+      - Bearer: []
+      summary: delete content
+      tags:
+      - contents
+    get:
+      consumes:
+      - application/json
+      description: get content by ID
+      parameters:
+      - description: Content ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.Content'
+      security:
+      - Bearer: []
+      summary: get content by ID
+      tags:
+      - contents
+    patch:
+      consumes:
+      - application/json
+      description: update content
+      parameters:
+      - description: Content ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.ContentPayload'
+      security:
+      - Bearer: []
+      summary: update content
+      tags:
+      - contents
+    post:
+      consumes:
+      - application/json
+      description: create content
+      parameters:
+      - description: The input struct
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/dto.ContentPayload'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.Content'
+      security:
+      - Bearer: []
+      summary: create content
+      tags:
+      - contents
+securityDefinitions:
+  BearerAuth:
+    description: Type "Bearer" followed by a space and JWT token.
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
